# anphat-chabot

./: .env.example  .gitignore  Makefile  anphat_crawler_v5.py  docker-compose.yml  llm_normalize.py  pyproject.toml
agents/: budget.py  config.py  secrets.py  security.py  tracing.py
agents/compat/: __init__.py  build_pc_algorithm.py  rules.py  schemas.py
agents/langgraph/: __init__.py  checkpointer.py  graph.py  nodes.py  state.py
agents/observability/: __init__.py  steps.py
agents/providers/: __init__.py  anthropic.py  base.py  local.py  openai.py
agents/tools/: __init__.py  admin.py  admin_audit.py  build_pc.py  compatibility.py  graph.py  products.py  render.py  search.py
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routes/: __init__.py  build_pc.py  categories.py  copilot.py  copilotkit_bridge.py  copilotkit_graphql.py  health.py  products.py  search.py
db/: README.md
db/migrations/: 001_init.sql  002_seed_run_index.sql  003_spec_values_index.sql  004_m4_api_indexes.sql  005_m5_agent_infra.sql  005_role.sql
scripts/: __init__.py  load_m2.py  load_m3.py
scripts/m2_pipeline/: __init__.py  config.py  db.py  hashing.py  mapping.py  parse.py  pipeline.py  verify.py
scripts/m3_search/: __init__.py  config.py  db.py  documents.py  fallback.py  index_settings.py  meili.py  search.py  sync.py  verify.py
scripts/m5b_graph/: __init__.py  build_graph.py  config.py  verify_graph.py
tests/: __init__.py  conftest.py  test_chat_budget_bug.py  test_hashing.py  test_m3_documents.py  test_m3_filters.py  test_m3_search.py  test_m3_settings.py  test_m3_sync.py  test_m5_budget.py  test_m5_cancellation.py  test_m5_providers.py  test_m5_security.py  test_m5_state.py  test_m5_steps.py  test_m5b_build_pc.py  test_m5b_endpoints.py  test_m5b_graph.py  test_m5b_rules.py  test_m5b_xhigh.py  test_m6_claude_langfuse.py  test_mapping.py  test_pipeline.py
tests/api/: conftest.py  test_copilot.py  test_health.py  test_m7_agui_bridge.py  test_products.py  test_search.py
tests/evals/: __init__.py  dataset.py  test_agent_golden.py
web/: .env.example  components.json  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo
web/public/: chat-test.html
(+56 files in other folders)
