[project]
name = "crawler"
version = "0.1.0"
description = "An Phat crawler + import pipeline (M0/M1/M2)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "requests>=0.34.2",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "meilisearch==0.34.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=0.1",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langfuse>=2.0",
    "copilotkit>=0.1",
    "slowapi>=0.1.9",
    "pyjwt[crypto]>=2.8",
    "boto3>=1.34",
]

[project.optional-dependencies]
m5 = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=0.1",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langfuse>=2.0",
    "copilotkit>=0.1",
    "slowapi>=0.1.9",
    "pyjwt[crypto]>=2.8",
    "boto3>=1.34",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a live PostgreSQL database",
    "requires_meili: tests that require a live Meilisearch instance",
    "agent_eval: golden agent eval tests (require LLM API access)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
